fix(advocates): fix white space appearing from h2 margin

--- a/templates/stock-advocates/stock-advocates.css
+++ b/templates/stock-advocates/stock-advocates.css
@@ -131,6 +131,11 @@ main h2:not(.h4) {
   padding: 0 16px;
 }
 
+main h2:first-child:not(.h4) {
+  margin-top: 0;
+  padding-top: 1em;
+}
+
 h3.h5 {
 	font-size: 20px;
 }
